# cookiecutter-jupyter

./: README.md
{{ cookiecutter.project_slug }}/: .gitignore  README.md  pyproject.toml  tox.ini
