[tool.poetry]
name = "flight_delays"
version = "0.1.0"
description = "Predicting flight delays"
authors = [
    "Will Sorenson <wills188@gmail.com>",
]

license = "BSD-3-Clause"
readme = "README.md"

documentation = "https://github.com/Will-So/flight_delays/blob/master/README.md"
homepage = "https://github.com/Will-So/flight_delays"
repository = "https://github.com/Will-So/flight_delays"

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
  ,
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

include = ["flight_delays/py.typed"]
packages = [
  { include = "flight_delays" },
]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
jupyterlab = "^3.5.2"
pandas = "^1.5.3"
pyarrow = "^10.0.1"

[tool.poetry.dev-dependencies]
autoflake = "*"
better-exceptions = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
isort = "*"
jupyterlab = "*"
jupytext = "*"
mypy = "*"
nbstripout = "*"
pdbpp = "*"
pep8-naming = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
tox = "*"
tox-gh-actions = "*"
pytest-watch = "*"

[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"

[tool.black]
line-length = 120
skip-string-normalization = true
target_version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

